force-app/main/default/objects/Shipment__c/fields/Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status__c</fullName>
    <label>Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Packed</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>