force-app/main/default/objects/Shipment__c/fields/Exception_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exception_Reason__c</fullName>
    <label>Exception Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Address_Issue</fullName>
                <label>Address Issue</label>
            </value>
            <value>
                <fullName>Weather</fullName>
            </value>
            <value>
                <fullName>Carrier_Delay</fullName>
                <label>Carrier Delay</label>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>