force-app/main/default/objects/Shipment__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <type>Lookup</type>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Order_Shipments</relationshipName>
</CustomField>